syntax = "proto3";
package rpc.auth;
option go_package = "./src/rpc/auth";

message LoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message LoginResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message RegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message RegisterResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message AuthenticateRequest {
  string token = 1; // 用户鉴权token
}

message AuthenticateResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
}

service AuthService {
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);

  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc Login (LoginRequest) returns (LoginResponse);
}